...

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:id="@id/linear3"
        android:layout_below="@+id/linear2"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bmiCalculator"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_weight="90"
                android:background="@drawable/border"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
...
